--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
-flask
-pillow
-requests
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mysql==0.0.3
+mysql-connector-python==9.3.0
+mysqlclient==2.2.7
+pillow==11.2.1
+PyMySQL==1.1.1
+requests==2.32.3
+SQLAlchemy==2.0.40
+typing_extensions==4.13.2
+urllib3==2.4.0
+Werkzeug==3.1.3
